--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/images/logo.png"
+      href="assets/img/image1.png"
     />
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
